--- a/style.css
+++ b/style.css
@@ -20,3 +20,108 @@ body
     justify-content: center;
     margin: auto;
 }
+
+.item
+{
+    position: relative;
+    width: 350px;
+    height: 600px;
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 0 15px 0 rgba(0,0,0,0.1);
+}
+
+.item-inner
+{
+    width: 100%;
+    height: 100%;
+}
+
+.top
+{
+    width: 100%;
+    height: 60%;
+    background-color: #000;
+    padding: 30px;
+    border-radius: 30px;
+    color: #fff;
+}
+
+.nav
+{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.nav i
+{
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.top h3
+{
+    font-weight: 500;
+}
+
+.top h1
+{
+    font-weight: 600;
+}
+
+.top h5
+{
+    font-weight: 400;
+}
+
+.bottom
+{
+    padding: 30px;
+}
+
+.bottom h3
+{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.options i
+{
+    font-size: 20px;
+    color: #ccc;
+    border: 1px solid #ccc;
+    padding: 10px 12px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.options a
+{
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    margin-left: 10px;
+    background-color: tomato;
+    padding: 10px 12px;
+    border-radius: 10px;
+}
+
+#firstShoe
+{
+    width: 450px;
+    position: absolute;
+    top: 160px;
+    left: -50px;
+    transition: 1s;
+}
+
+#secondShoe
+{
+    width: 450px;
+    position: absolute;
+    top: 160px;
+    left: -650px;
+    transition: 1s;
+}
